--- a/generate/pom.xml
+++ b/generate/pom.xml
@@ -68,7 +68,16 @@
 			<artifactId>transport</artifactId>
 			<version>6.0.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.adc</groupId>
+            <artifactId>myutil</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
