--- a/adc-da-main/src/main/resources/application.properties
+++ b/adc-da-main/src/main/resources/application.properties
@@ -3,13 +3,13 @@
 # ===============================
 spring.datasource.driverClassName = oracle.jdbc.OracleDriver
 #数据库服务器外网ip221.239.111.146 内网10.10.0.3
-spring.datasource.url = jdbc:oracle:thin:@//192.168.0.107:1521/XE
+spring.datasource.url = jdbc:oracle:thin:@//localhost:1521/orcl
 #spring.datasource.url = jdbc:oracle:thin:@//192.168.0.153:1521/XE
 #spring.datasource.url = jdbc:oracle:thin:@//192.168.1.139:1521/XE
 #spring.datasource.url = jdbc:oracle:thin:@//192.168.0.5:1521/XE
 #spring.datasource.username = students
-spring.datasource.username = test
-spring.datasource.password = 1234
+spring.datasource.username = scott
+spring.datasource.password = tiger
 
 spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
 # 下面为连接池的补充设置，应用到上面所有数据源中
