--- a/adc-da-main/src/main/resources/gen/database.properties
+++ b/adc-da-main/src/main/resources/gen/database.properties
@@ -6,9 +6,9 @@
 #database_name=test
 
 diver_name=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
-username=text
-password=text
+url=jdbc:oracle:thin:@192.168.0.162:1521:XE
+username=code
+password=1234
 database_name=adc_platform
 
 #url=jdbc:mysql://172.23.5.178:3306/wherehows?characterEncoding=utf-8&&zeroDateTimeBehavior=convertToNull
